--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,11 +49,10 @@ dependencies:
   url_launcher: ^6.0.12
   share_plus: ^10.0.0
   google_fonts: ^6.2.1
-  qr_code_scanner: ^1.0.0
-  qr_flutter: ^4.1.0
   rxdart: ^0.28.0
   translator: ^1.0.0
   http: ^1.0.0
+  socket_io_client: ^3.0.2
 
 dev_dependencies:
   test: ^1.17.10
