--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.3
+  sdk: ">=2.12.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -53,6 +53,7 @@ dependencies:
   translator: ^1.0.0
   http: ^1.0.0
   socket_io_client: ^3.0.2
+  font_awesome_flutter: ^10.3.0
 
 dev_dependencies:
   test: ^1.17.10
