--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,17 +100,8 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - assets/images/icon-48.png
-    - assets/images/icon-480.png
-    - assets/images/icon-400.png
-    - assets/images/qr.png
-    - assets/images/bulb.png
-    - assets/images/google_logo.png
-    - assets/images/error_image.png
-    - assets/images/logo_therabot_with_name.png
-    - assets/images/logo_therabot.png
-    - assets/images/back.jpeg
-
+    - assets/
+    - assets/images/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
